worte package.json file

--- a/package.json
+++ b/package.json
@@ -1,11 +1,33 @@
 {
-  "name": "validate-obj",
-  "version": "0.1.0",
-  "description": "simple way to validate object",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Ron Liu <ronliu2k@gmail.com>",
-  "license": "BSD-2-Clause"
+	"name": "validate-obj",
+	"version": "0.1.0",
+	"homepage": "http://github.com/ron-liu/validate-obj.js",
+	"keywords": [
+		"validator", "validation", "validate", "form", "object"
+	],
+	"description": "simple way to validate object",
+	"bugs": {
+		"url": "http://github.com/ron-liu/validate-obj/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "http://github.com/ron-liu/validate-obj.js.git"
+	},
+	"scripts": {
+	"test": "./node_modules/.bin/_mocha --reporter spec"
+	},
+	"devDependencies": {
+		"mocha": "latest",
+		"istanbul": "latest",
+		"jshint": "latest",
+		"uglify-js": "latest"
+	},
+	"engines": { "node" : ">= 0.8" },
+	"author": "Ron Liu <ronliu2k@gmail.com>",
+	"licenses": [
+		{
+			"type": "MIT",
+			"url": "http://github.com/chriso/validator.js/raw/master/LICENSE"
+		}
+	]
 }
